<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:paddingTop="@dimen/status_bar_height"
    tools:context=".modules.login.LogInActivity" >

    <ImageView
        android:id="@+id/log_in_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_bigger"
        android:layout_marginBottom="@dimen/margin_big"
        android:contentDescription="@string/log_in_logo_desc"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_in_app_name_text_view"
        />

    <TextView
        android:id="@+id/login_in_app_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_half"
        android:layout_marginStart="@dimen/margin_half"
        android:layout_marginBottom="@dimen/margin_big"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_size_app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_logo"
        app:layout_constraintBottom_toTopOf="@id/log_in_email_edit_text"
        />

    <EditText
        android:id="@+id/log_in_email_edit_text"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginEnd="@dimen/margin_bigger"
        android:layout_marginStart="@dimen/margin_bigger"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:hint="@string/log_in_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_in_app_name_text_view"
        app:layout_constraintBottom_toTopOf="@id/log_in_password_edit_text"
        />

    <EditText
        android:id="@+id/log_in_password_edit_text"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/margin_normal"
        android:hint="@string/log_in_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/log_in_email_edit_text"
        app:layout_constraintStart_toStartOf="@id/log_in_email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/log_in_email_edit_text"
        />

    <Button
        android:id="@+id/log_in_button"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/log_in_log_in_text"
        app:layout_constraintEnd_toEndOf="@id/log_in_password_edit_text"
        app:layout_constraintStart_toStartOf="@id/log_in_password_edit_text"
        app:layout_constraintTop_toBottomOf="@id/log_in_password_edit_text" />

    <Button
        android:id="@+id/log_in_register_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/log_in_create_account"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/margin_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</android.support.constraint.ConstraintLayout>