<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".modules.classroomcreation.ClassroomCreationActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:title="New classroom"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <EditText
        android:id="@+id/classroom_creation_title_text_edit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textCapSentences"
        android:textSize="16sp"
        android:layout_margin="@dimen/margin_normal"
        android:hint="@string/classroom_creation_title_hint"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/classroom_creation_description_text_edit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textCapSentences|textMultiLine"
        android:textSize="16sp"
        android:layout_margin="@dimen/margin_normal"
        android:hint="@string/classroom_creation_description_hint"
        app:layout_constraintTop_toBottomOf="@id/classroom_creation_title_text_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/classroom_creation_start_date_picker_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        tools:text="19 July 2018"
        android:drawableStart="@drawable/ic_baseline_date_range_24px"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@id/classroom_creation_description_text_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/classroom_creation_start_time_picker_button"
        />

    <Button
        android:id="@+id/classroom_creation_start_time_picker_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        tools:text="00:30"
        android:drawableStart="@drawable/ic_baseline_access_time_24px"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="0.5"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@id/classroom_creation_description_text_edit"
        app:layout_constraintStart_toEndOf="@id/classroom_creation_start_date_picker_button"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/classroom_creation_end_date_picker_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        tools:text="20 July 2018"
        android:drawableStart="@drawable/ic_baseline_date_range_24px"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@id/classroom_creation_start_date_picker_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/classroom_creation_end_time_picker_button"
        />

    <Button
        android:id="@+id/classroom_creation_end_time_picker_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        tools:text="07:30"
        android:drawableStart="@drawable/ic_baseline_access_time_24px"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="0.5"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@id/classroom_creation_start_time_picker_button"
        app:layout_constraintStart_toEndOf="@id/classroom_creation_end_date_picker_button"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/classroom_creation_confirm_button"
        android:text="@string/classroom_creation_confirm_text"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:background="@color/colorPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@id/classroom_creation_end_date_picker_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</android.support.constraint.ConstraintLayout>